# home_work_19_2

./: README.md  data.json  manage.py  product.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py  fill_pd.py
catalog/migrations/: 0001_initial.py
catalog/templates/main/: contact.html  index.html
my_django_poject/: asgi.py  settings.py  urls.py  wsgi.py
