[tool.poetry]
name = "my-django-poject"
version = "0.1.0"
description = ""
authors = ["sergey <serglapinofff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-jazzmin = "^2.6.0"
psycopg2-binary = "^2.9.9"
ipython = "^8.16.1"
pillow = "^10.1.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
